--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body class="bg-light">
   <nav class="navbar navbar-expand-lg navbar-light bg-white shadow-sm">
     <div class="container">
-      <a class="navbar-brand" href="index.html">Hae reseptejä</a>
+      <a class="nav-link" href="index.html">Hae reseptejä</a>
       <div>
         <a class="nav-link" href="suosikit.html">Suosikit</a>
       </div>
