--- a/index.html
+++ b/index.html
@@ -24,11 +24,8 @@
     <button id="searchBtn" class="btn btn-primary">Hae</button>
     <div id="results" class="row mt-4"></div>
   </div>
-
-  <script src="js\main.js"></script>
-
  
-<div class="modal fade" id="recipeModal" tabindex="-1" aria-hidden="true">
+ <div class="modal fade" id="recipeModal" tabindex="-1" aria-hidden="true">
   <div class="modal-dialog modal-lg modal-dialog-centered">
     <div class="modal-content">
       <div class="modal-header">
@@ -50,6 +47,7 @@
 </div>
 
  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+ <script src="js/main.js"></script>
 
 </body>
 </html>
