--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
   <div class="container text-center my-5">
     <h1>Etsi leivontareseptejä</h1>
-    <input id="searchInput" type="text" placeholder="Esim. cake, bread..." class="form-control my-3">
+    <input id="searchInput" type="text" placeholder="Esim. cake, pie..." class="form-control my-3">
     <button id="searchBtn" class="btn btn-primary">Hae</button>
     <div id="results" class="row mt-4"></div>
   </div>
