--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <div class="container text-center my-5">
     <h1>Etsi leivontareseptejä</h1>
     <input id="searchInput" type="text" placeholder="Esim. cake, pie..." class="form-control my-3">
-    <button id="searchBtn" class="btn btn-primary">Hae</button>
+    <button id="searchBtn" class="btn-primary">Hae</button>
     <div id="results" class="row mt-4"></div>
   </div>
  
@@ -34,9 +34,9 @@
       </div>
       <div class="modal-body">
         <img id="recipeImg" src="" alt="" class="img-fluid rounded mb-3">
-        <h6>Ainesosat</h6>
+        <h6>Ainesosat:</h6>
         <ul id="recipeIngredients"></ul>
-        <h6>Ohjeet</h6>
+        <h6>Ohjeet:</h6>
         <p id="recipeInstructions"></p>
       </div>
       <div class="modal-footer">
