--- a/index.html
+++ b/index.html
@@ -4,16 +4,20 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Leipuriapuri</title>
+  <link rel="icon" type="favicon" href="/pictures/favicon.png">
   <link rel="stylesheet" href="css/style.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@500&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Caveat+Brush&display=swap" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body class="bg-light">
   <nav class="navbar navbar-expand-lg navbar-light bg-white shadow-sm">
     <div class="container">
-      <a class="nav-link" href="index.html">Hae reseptejä</a>
+      <a class="nav-link" href="index.html">etsi reseptejä</a>
       <div>
-        <a class="nav-link" href="suosikit.html">Suosikit</a>
+        <a class="nav-link" href="suosikit.html">suosikit</a>
       </div>
     </div>
   </nav>
